# human_pose_estimation_3d

./: .gitignore  README.md  pyproject.toml
config/: camera_parameters.json  template.yaml
docker/: Dockerfile  docker_deploy.sh  entrypoint.sh  model_convert_trt.sh
examples/: walk_session_1_example.py
hpe3d/logger/: logger.py
hpe3d/model/: __init__.py  human_detector.py  human_pose_detector_2d.py  human_pose_detector_3d.py  triangulator.py
hpe3d/utils/: camera_utils.py  dataset_utils.py  geometry_utils.py
hpe3d/visualizer/: __init__.py  rviz_visualizer.py
